--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-action-button": "^2.8.5",
+    "react-native-modal": "^9.0.0",
     "react-native-responsive-screen": "^1.2.0"
   },
   "devDependencies": {
