--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
+    "react-native-custom-picker": "^0.3.1",
     "react-native-modal": "^9.0.0",
     "react-native-responsive-screen": "^1.2.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "standard": "^12.0.1"
   },
   "private": true
 }
