--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "react-native-responsive-screen": "^1.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-preset-expo": "^5.0.0",
     "standard": "^12.0.1"
   },
-  "private": true
+  "private": true,
+  "standard": {
+    "parser": "babel-eslint"
+  }
 }
