--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
   },
   "dependencies": {
     "expo": "^32.0.0",
+    "mobx": "^5.9.0",
+    "mobx-persist": "^0.4.1",
+    "mobx-react": "^5.4.3",
+    "moment": "^2.24.0",
+    "randomatic": "^3.1.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
     "react-native-custom-picker": "^0.3.1",
     "react-native-modal": "^9.0.0",
-    "react-native-responsive-screen": "^1.2.0"
+    "react-native-responsive-screen": "^1.2.0",
+    "uuid-js": "^0.7.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
