--- a/app.json
+++ b/app.json
@@ -24,6 +24,8 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "A simple note taking app",
+    "githubUrl": "https://github.com/kachnitel/notes-app"
   }
 }
